About Us section done

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </header>
     <!-- Main Section -->
     <main class="bg-gray-100">
-        <!-- Design Section -->
+        <!-- About Us section -->
         <section>
             <div class="pl-32 pb-6 pt-10 hidden lg:flex">
                 <img src="./assets/Vector.png" alt="">
@@ -178,10 +178,11 @@
                     </div>
                 </div>
                 <div class="flex justify-center items-center mt-6 lg:mt-0">
-                    <img src="./assets/Rectangle.png" alt="" class="object-cover">
+                    <img src="./assets/Rectangle.png" alt="" class="h-60 w-full lg:h-auto">
                 </div>
             </div>
         </section>
+
     </main>
     <!-- Footer Section -->
     <footer></footer>
