--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         .font-manrope {
             font-family: "Manrope", sans-serif;
         }
-       
     </style>
 
     <!-- Fontawesome CDN -->
@@ -141,7 +140,7 @@
             <div class="pl-32 pb-6 pt-10 hidden lg:flex">
                 <img src="./assets/Vector.png" alt="">
             </div>
-            
+
             <div class="w-4/5 mx-auto flex flex-col lg:flex-row lg:justify-between pb-24">
                 <div class="lg:w-1/2 space-y-6">
                     <div class="btn bg-white rounded-full flex mt-6 w-max lg:mt-0 mx-auto lg:mx-0">
@@ -150,13 +149,16 @@
                         </div>
                         <a class="text-[#494949] font-bold text-base">About Us</a>
                     </div>
-                    <h3 class="text-2xl lg:text-[40px] font-bold text-[#212121] lg:leading-[55px] leading-[33px] text-center lg:text-left">We design
+                    <h3
+                        class="text-2xl lg:text-[40px] font-bold text-[#212121] lg:leading-[55px] leading-[33px] text-center lg:text-left">
+                        We design
                         thoughtful,<br> liveable
                         spaces</h3>
-                    <p class="text-base font-medium text-[#494949] text-center lg:text-left">The barn house captivates with its blend of rustic
+                    <p class="text-base font-medium text-[#494949] text-center lg:text-left">The barn house captivates
+                        with its blend of rustic
                         charm and
                         modern sophistication, featuring weathered wood, sleek metal accents.</p>
-                    <div class="flex items-center bg-[#FFFFFF] p-6">
+                    <div class="flex items-center bg-[#FFFFFF] p-6 rounded-2xl">
                         <div class="flex-shrink-0">
                             <img src="./assets/commercial.png" alt="" class="h-16 w-16">
                         </div>
@@ -166,7 +168,7 @@
                                 rustic charm and modern.</p>
                         </div>
                     </div>
-                    <div class="flex items-center bg-[#FFFFFF] p-6">
+                    <div class="flex items-center bg-[#FFFFFF] p-6 rounded-2xl">
                         <div class="flex-shrink-0">
                             <img src="./assets/residential.png" alt="" class="h-16 w-16">
                         </div>
@@ -179,6 +181,55 @@
                 </div>
                 <div class="flex justify-center items-center mt-6 lg:mt-0">
                     <img src="./assets/Rectangle.png" alt="" class="h-60 w-full lg:h-auto">
+                </div>
+            </div>
+        </section>
+
+        <!-- Work Process Section -->
+        <section>
+            <div class="w-4/5 mx-auto flex flex-col lg:flex-row lg:justify-between mt-[-40px] lg:mt-0 pb-[16px] lg:pb-[32px]">
+                <div class="w-full space-y-6">
+                    <div class="btn bg-white rounded-full flex w-max lg:mt-0 mx-auto">
+                        <div class="p-2 rounded-full">
+                            <i class="fa-solid fa-arrow-right text-black"></i>
+                        </div>         
+                        <a class="text-[#494949] font-bold text-base">How we works</a>
+                    </div>
+                    <h3
+                        class="text-2xl lg:text-[40px] font-bold text-[#212121] lg:leading-[55px] leading-[33px] text-center">
+                        Our Works Process</h3>
+                    <p class="text-base font-medium text-[#494949] text-center">The barn house captivates with its blend of
+                        rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>
+            </div>
+            <div class="w-4/5 mx-auto flex flex-col lg:flex-row lg:justify-between gap-5 pb-12 lg:pb-24">
+                <!-- Card-1 -->
+                <div class="lg:w-1/4 w-full bg-[#E7C1D3] rounded-2xl p-4 space-y-3">
+                    <img src="./assets/concept.png" alt="">
+                    <h5 class="text-xl font-extrabold text-[#1C1C1C]">Concept</h5>
+                    <p class="text-base font-medium text-[#494949]">The barn house captivates with its blend of
+                        rustic charm and modern.</p>
+                </div>
+                <!-- Card-2 -->
+                <div class="lg:w-1/4 w-full bg-[#EFDA6E] rounded-2xl p-4 space-y-3">
+                    <img src="./assets/flow-chart.png" alt="">
+                    <h5 class="text-xl font-extrabold text-[#1C1C1C]">Design Process</h5>
+                    <p class="text-base font-medium text-[#494949]">The barn house captivates with its blend of
+                        rustic charm and modern.</p>
+                </div>
+                <!-- Card-3 -->
+                <div class="lg:w-1/4 w-full bg-[#A4DAC3] rounded-2xl p-4 space-y-3">
+                    <img src="./assets/vision.png" alt="">
+                    <h5 class="text-xl font-extrabold text-[#1C1C1C]">Supervision</h5>
+                    <p class="text-base font-medium text-[#494949]">The barn house captivates with its blend of
+                        rustic charm and modern.</p>
+                </div>
+                <!-- Card-4 -->
+                <div class="lg:w-1/4 w-full bg-[#77AAEA] rounded-2xl p-4 space-y-3">
+                    <img src="./assets/budget-planning.png" alt="">
+                    <h5 class="text-xl font-extrabold text-[#1C1C1C]">Budget Planning</h5>
+                    <p class="text-base font-medium text-[#494949]">The barn house captivates with its blend of
+                        rustic charm and modern.</p>
                 </div>
             </div>
         </section>
