Latest Portfolio Section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     colors: {
                         clifford: '#da373d',
                         'color-primary': '#ABEF5F',
+                        'custom-light-green': 'rgba(171, 239, 95, 0.2)',
                     }
                 }
             }
@@ -187,18 +188,20 @@
 
         <!-- Work Process Section -->
         <section>
-            <div class="w-4/5 mx-auto flex flex-col lg:flex-row lg:justify-between mt-[-40px] lg:mt-0 pb-[16px] lg:pb-[32px]">
+            <div
+                class="w-4/5 mx-auto flex flex-col lg:flex-row lg:justify-between mt-[-40px] lg:mt-0 pb-[16px] lg:pb-[32px]">
                 <div class="w-full space-y-6">
                     <div class="btn bg-white rounded-full flex w-max lg:mt-0 mx-auto">
                         <div class="p-2 rounded-full">
                             <i class="fa-solid fa-arrow-right text-black"></i>
-                        </div>         
+                        </div>
                         <a class="text-[#494949] font-bold text-base">How we works</a>
                     </div>
                     <h3
                         class="text-2xl lg:text-[40px] font-bold text-[#212121] lg:leading-[55px] leading-[33px] text-center">
                         Our Works Process</h3>
-                    <p class="text-base font-medium text-[#494949] text-center">The barn house captivates with its blend of
+                    <p class="text-base font-medium text-[#494949] text-center">The barn house captivates with its blend
+                        of
                         rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
                 </div>
             </div>
@@ -230,6 +233,90 @@
                     <h5 class="text-xl font-extrabold text-[#1C1C1C]">Budget Planning</h5>
                     <p class="text-base font-medium text-[#494949]">The barn house captivates with its blend of
                         rustic charm and modern.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Latest Portfolio Section -->
+        <section class="lg:bg-white pt-12">
+            <div class="w-4/5 mx-auto flex flex-col lg:flex-row lg:justify-between pb-[16px] lg:pb-[32px]">
+                <div class="w-full space-y-6">
+                    <div class="btn bg-custom-light-green rounded-full flex w-max lg:mt-0 mx-auto">
+                        <div class="p-2 rounded-full">
+                            <i class="fa-solid fa-arrow-right text-black"></i>
+                        </div>
+                        <a class="text-[#494949] font-bold text-base">Explore our Latest works</a>
+                    </div>
+                    <h3
+                        class="text-2xl lg:text-[40px] font-bold text-[#212121] lg:leading-[55px] leading-[33px] text-center">
+                        Our Latest Portfolio</h3>
+                    <p class="text-base font-medium text-[#494949] text-center">The barn house captivates with its blend
+                        of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>
+            </div>
+            <div class="space-y-5">
+                <!-- 1st row -->
+                <div class="w-4/5 mx-auto flex flex-col lg:flex-row gap-5">
+                    <!-- 1st card -->
+                    <div
+                        class="flex flex-col lg:flex-row box-border border border-[#e9e9e9] rounded-[16px] p-6 gap-4 w-full lg:w-3/5 bg-white">
+                        <img src="./assets/img1.png" alt="" class="w-full lg:w-2/5">
+                        <div class="space-y-4 w-full lg:w-3/5">
+                            <div class="pl-4 space-y-3 pt-3">
+                                <h5 class="text-2xl font-extrabold text-[#1C1C1C]">Commercial</h5>
+                                <p class="text-base font-medium text-[#494949]">The barn house captivates with its blend
+                                    of
+                                    rustic charm and modern.</p>
+                            </div>
+                            <div class="flex items-center btn btn-ghost w-max">
+                                <a class="text-xl font-bold text-[#212121]">View Details</a>
+                                <div class="bg-color-primary p-2 rounded-full">
+                                    <i class="fa-solid fa-arrow-right -rotate-45"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 2nd card -->
+                    <div
+                        class="w-full lg:w-2/5 flex justify-center items-center box-border border border-[#e9e9e9] rounded-[16px] bg-white">
+                        <img src="./assets/img2.png" alt="" class="w-full p-5">
+                    </div>
+                </div>
+                <!-- 2nd row -->
+                <div class="w-4/5 mx-auto flex flex-col lg:flex-row gap-5">
+                    <!-- 1st card -->
+                    <div
+                        class="w-full lg:w-1/4 flex justify-center items-center box-border border border-[#e9e9e9] rounded-[16px] bg-white">
+                        <img src="./assets/img3.png" alt="" class="w-full p-5">
+                    </div>
+                    <!-- 2nd card -->
+                    <div
+                        class="flex flex-col lg:flex-row box-border border border-[#e9e9e9] rounded-[16px] p-6 gap-4 w-full lg:w-2/4 bg-white">
+                        <img src="./assets/img4.png" alt="" class="w-full lg:w-2/5">
+                        <div class="space-y-4 w-full lg:w-3/5">
+                            <div class="pl-4 space-y-3 pt-3">
+                                <h5 class="text-2xl font-extrabold text-[#1C1C1C]">Commercial</h5>
+                                <p class="text-base font-medium text-[#494949]">The barn house captivates with its blend
+                                    of
+                                    rustic charm and modern.</p>
+                            </div>
+                            <div class="flex items-center btn btn-ghost w-max">
+                                <a class="text-xl font-bold text-[#212121]">View Details</a>
+                                <div class="bg-color-primary p-2 rounded-full">
+                                    <i class="fa-solid fa-arrow-right -rotate-45"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 3rd card -->
+                    <div
+                        class="w-full lg:w-1/4 flex justify-center items-center box-border border border-[#e9e9e9] rounded-[16px] bg-white lg:hidden">
+                        <img src="./assets/img3.png" alt="" class="w-full p-5">
+                    </div>
+                    <div
+                        class="w-full lg:w-1/4 flex justify-center items-center box-border border border-[#e9e9e9] rounded-[16px] bg-white">
+                        <img src="./assets/img5.png" alt="" class="w-full p-5">
+                    </div>
                 </div>
             </div>
         </section>
