--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                     </div>
                     <div class="btn bg-color-primary rounded-full hidden lg:flex">
-                        <a class="text-black font-extrabold text-lg text-[#1C1C1C]">Book Consult</a>
+                        <a class="font-extrabold text-lg text-[#1C1C1C]">Book Consult</a>
                         <div class="bg-black p-2 rounded-full">
                             <i class="fa-solid fa-arrow-right -rotate-45 text-white"></i>
                         </div>
@@ -263,13 +263,13 @@
                         <img src="./assets/img1.png" alt="" class="w-full lg:w-2/5">
                         <div class="space-y-4 w-full lg:w-3/5">
                             <div class="pl-4 space-y-3 pt-3">
-                                <h5 class="text-2xl font-extrabold text-[#1C1C1C]">Commercial</h5>
+                                <h5 class="text-xl lg:text-2xl font-extrabold text-[#1C1C1C]">Commercial</h5>
                                 <p class="text-base font-medium text-[#494949]">The barn house captivates with its blend
                                     of
                                     rustic charm and modern.</p>
                             </div>
                             <div class="flex items-center btn btn-ghost w-max">
-                                <a class="text-xl font-bold text-[#212121]">View Details</a>
+                                <a class="text-base lg:text-xl font-bold text-[#212121]">View Details</a>
                                 <div class="bg-color-primary p-2 rounded-full">
                                     <i class="fa-solid fa-arrow-right -rotate-45"></i>
                                 </div>
@@ -283,7 +283,7 @@
                     </div>
                 </div>
                 <!-- 2nd row -->
-                <div class="w-4/5 mx-auto flex flex-col lg:flex-row gap-5">
+                <div class="w-4/5 mx-auto flex flex-col lg:flex-row gap-5 pb-6">
                     <!-- 1st card -->
                     <div
                         class="w-full lg:w-1/4 flex justify-center items-center box-border border border-[#e9e9e9] rounded-[16px] bg-white">
@@ -295,13 +295,13 @@
                         <img src="./assets/img4.png" alt="" class="w-full lg:w-2/5">
                         <div class="space-y-4 w-full lg:w-3/5">
                             <div class="pl-4 space-y-3 pt-3">
-                                <h5 class="text-2xl font-extrabold text-[#1C1C1C]">Commercial</h5>
+                                <h5 class="text-xl lg:text-2xl font-extrabold text-[#1C1C1C]">Commercial</h5>
                                 <p class="text-base font-medium text-[#494949]">The barn house captivates with its blend
                                     of
                                     rustic charm and modern.</p>
                             </div>
                             <div class="flex items-center btn btn-ghost w-max">
-                                <a class="text-xl font-bold text-[#212121]">View Details</a>
+                                <a class="text-base lg:text-xl font-bold text-[#212121]">View Details</a>
                                 <div class="bg-color-primary p-2 rounded-full">
                                     <i class="fa-solid fa-arrow-right -rotate-45"></i>
                                 </div>
@@ -319,6 +319,67 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <!-- Next Project Section -->
+        <section class="bg-[url('./assets/bg.jpg')] bg-cover bg-center pt-6">
+            <div class="w-4/5 lg:w-3/5 mx-auto flex flex-col lg:flex-row lg:justify-between pb-[16px] lg:pb-[32px]">
+                <div class="w-full space-y-4 lg:space-y-6">
+                    <div class="btn bg-custom-light-green rounded-full flex w-max lg:mt-0 mx-auto">
+                        <div class="p-2 rounded-full">
+                            <i class="fa-solid fa-arrow-right text-black"></i>
+                        </div>
+                        <a class="text-[#494949] font-bold text-base">Let’s Connect</a>
+                    </div>
+                    <h3
+                        class="text-2xl lg:text-[40px] font-bold text-[#212121] lg:leading-[55px] leading-[33px] text-center">
+                        Let’s Discuss Next Project</h3>
+                    <p class="text-base font-medium text-[#494949] text-center">The barn house captivates with its blend
+                        of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>
+            </div>
+            <!-- Form Section -->
+            <form class="lg:pb-8 rounded-lg w-4/5 lg:w-3/5 mx-auto space-y-5">
+                <div class="grid grid-rows-1 lg:grid-cols-2 gap-5">
+                    <div>
+                        <label for="first-name" class="sr-only">First Name</label>
+                        <input id="first-name" type="text" placeholder="First Name*"
+                            class="w-full p-3 border rounded-full text-base font-medium focus:outline-none focus:ring-2 focus:ring-green-400"
+                            required>
+                    </div>
+                    <div>
+                        <label for="last-name" class="sr-only">Last Name</label>
+                        <input id="last-name" type="text" placeholder="Last Name*"
+                            class="w-full p-3 border rounded-full text-base font-medium focus:outline-none focus:ring-2 focus:ring-green-400"
+                            required>
+                    </div>
+                </div>
+                <div class="grid grid-rows-1 lg:grid-cols-2 gap-5">
+                    <div class="">
+                        <label for="phone-number" class="sr-only">Phone Number</label>
+                        <input id="phone-number" type="tel" placeholder="Phone Number*"
+                            class="w-full p-3 border rounded-full text-base font-medium focus:outline-none focus:ring-2 focus:ring-green-400"
+                            required>
+                    </div>
+                    <div class="">
+                        <label for="email-number" class="sr-only">Email Number</label>
+                        <input id="email-number" type="email" placeholder="Email Number*"
+                            class="w-full p-3 border rounded-full text-base font-medium focus:outline-none focus:ring-2 focus:ring-green-400"
+                            required>
+                    </div>
+                </div>
+                <div class="">
+                    <label for="message" class="sr-only">Write your message here</label>
+                    <textarea id="message" placeholder="Write your message here"
+                        class="w-full p-3 border rounded-[32px] text-base font-medium focus:outline-none focus:ring-2 focus:ring-green-400 h-32"></textarea>
+                </div>
+                <div class="btn bg-[#ABEF5F] rounded-full flex">
+                    <a class="font-extrabold text-xl text-[#1C1C1C]">Send Mail</a>
+                    <div class="bg-black p-2 rounded-full">
+                        <i class="fa-solid fa-arrow-right -rotate-45 text-white"></i>
+                    </div>
+                </div>
+            </form>
         </section>
 
     </main>
