--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                         this design
                         has a striking appearance</h1>
                     <p class="py-6 font-medium text-sm lg:text-base text-center text-[#494949]">
-                        The barn house captivates with its blend of rustic charm and modern sophistication, featuring
-                        weathered wood, sleek metal accents, and large windows that flood the space with natural light.
+                        This barn house stands out with its bold design, blending rustic elements with modern aesthetics
+                        for a truly striking appearance.
                     </p>
                     <div class="btn bg-lime-200 rounded-full flex w-full lg:w-max mx-auto lg:mb-24 mb-2">
                         <a class="text-[#212121] font-bold text-lg">View Details</a>
@@ -155,18 +155,18 @@
                         We design
                         thoughtful,<br> liveable
                         spaces</h3>
-                    <p class="text-base font-medium text-[#494949] text-center lg:text-left">The barn house captivates
-                        with its blend of rustic
-                        charm and
-                        modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    <p class="text-base font-medium text-[#494949] text-center lg:text-left">Combining rustic charm with
+                        modern sophistication, the barn house features a striking mix of weathered wood and sleek metal
+                        accents.</p>
                     <div class="flex items-center bg-[#FFFFFF] p-6 rounded-2xl">
                         <div class="flex-shrink-0">
                             <img src="./assets/commercial.png" alt="" class="h-16 w-16">
                         </div>
                         <div class="ml-4">
                             <h5 class="text-xl font-extrabold text-[#494949]">Commercial</h5>
-                            <p class="text-base font-medium text-[#737373]">The barn house captivates with its blend of
-                                rustic charm and modern.</p>
+                            <p class="text-base font-medium text-[#737373]">The commercial barn house stands out with
+                                its mix of weathered wood and contemporary metal accents, delivering a space that is
+                                both professional and warm.</p>
                         </div>
                     </div>
                     <div class="flex items-center bg-[#FFFFFF] p-6 rounded-2xl">
@@ -175,8 +175,9 @@
                         </div>
                         <div class="ml-4">
                             <h5 class="text-xl font-extrabold text-[#494949]">Residential</h5>
-                            <p class="text-base font-medium text-[#737373]">The barn house captivates with its blend of
-                                rustic charm and modern.</p>
+                            <p class="text-base font-medium text-[#737373]">The residential barn house harmonizes rustic
+                                charm with modern elegance, featuring weathered wood and sleek metal details that create
+                                a warm, inviting home.</p>
                         </div>
                     </div>
                 </div>
@@ -200,9 +201,9 @@
                     <h3
                         class="text-2xl lg:text-[40px] font-bold text-[#212121] lg:leading-[55px] leading-[33px] text-center">
                         Our Works Process</h3>
-                    <p class="text-base font-medium text-[#494949] text-center">The barn house captivates with its blend
-                        of
-                        rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    <p class="text-base font-medium text-[#494949] text-center">Combining rustic charm with modern
+                        sophistication, the barn house features a striking mix of weathered wood and sleek metal
+                        accents.</p>
                 </div>
             </div>
             <div class="w-4/5 mx-auto flex flex-col lg:flex-row lg:justify-between gap-5 pb-12 lg:pb-24">
@@ -210,29 +211,32 @@
                 <div class="lg:w-1/4 w-full bg-[#E7C1D3] rounded-2xl p-4 space-y-3">
                     <img src="./assets/concept.png" alt="">
                     <h5 class="text-xl font-extrabold text-[#1C1C1C]">Concept</h5>
-                    <p class="text-base font-medium text-[#494949]">The barn house captivates with its blend of
-                        rustic charm and modern.</p>
+                    <p class="text-base font-medium text-[#494949]">The concept phase blends innovative ideas with
+                        timeless rustic charm, setting the foundation for a design that is both modern and inviting.</p>
                 </div>
                 <!-- Card-2 -->
                 <div class="lg:w-1/4 w-full bg-[#EFDA6E] rounded-2xl p-4 space-y-3">
                     <img src="./assets/flow-chart.png" alt="">
                     <h5 class="text-xl font-extrabold text-[#1C1C1C]">Design Process</h5>
-                    <p class="text-base font-medium text-[#494949]">The barn house captivates with its blend of
-                        rustic charm and modern.</p>
+                    <p class="text-base font-medium text-[#494949]">Our design process integrates traditional elements
+                        with contemporary techniques, creating a seamless blend of rustic aesthetics and modern
+                        functionality.</p>
                 </div>
                 <!-- Card-3 -->
                 <div class="lg:w-1/4 w-full bg-[#A4DAC3] rounded-2xl p-4 space-y-3">
                     <img src="./assets/vision.png" alt="">
                     <h5 class="text-xl font-extrabold text-[#1C1C1C]">Supervision</h5>
-                    <p class="text-base font-medium text-[#494949]">The barn house captivates with its blend of
-                        rustic charm and modern.</p>
+                    <p class="text-base font-medium text-[#494949]">With close supervision, we ensure every detail
+                        harmonizes rustic charm with modern sophistication, resulting in a cohesive and well-executed
+                        project.</p>
                 </div>
                 <!-- Card-4 -->
                 <div class="lg:w-1/4 w-full bg-[#77AAEA] rounded-2xl p-4 space-y-3">
                     <img src="./assets/budget-planning.png" alt="">
                     <h5 class="text-xl font-extrabold text-[#1C1C1C]">Budget Planning</h5>
-                    <p class="text-base font-medium text-[#494949]">The barn house captivates with its blend of
-                        rustic charm and modern.</p>
+                    <p class="text-base font-medium text-[#494949]">Budget planning combines financial efficiency with
+                        high-quality materials, allowing us to achieve a perfect balance of rustic charm and modern
+                        elegance within your budget.</p>
                 </div>
             </div>
         </section>
@@ -259,8 +263,8 @@
                 <div class="w-4/5 mx-auto flex flex-col lg:flex-row gap-5">
                     <!-- 1st card -->
                     <div
-                        class="flex flex-col lg:flex-row box-border border border-[#e9e9e9] rounded-[16px] p-6 gap-4 w-full lg:w-3/5 bg-white">
-                        <img src="./assets/img1.png" alt="" class="w-full lg:w-2/5">
+                        class="flex flex-col lg:flex-row box-border border border-[#e9e9e9] rounded-[16px] p-6 gap-4 w-full lg:w-3/5 bg-white items-center">
+                        <img src="./assets/img1.png" alt="" class="w-full h-full lg:w-2/5">
                         <div class="space-y-4 w-full lg:w-3/5">
                             <div class="pl-4 space-y-3 pt-3">
                                 <h5 class="text-xl lg:text-2xl font-extrabold text-[#1C1C1C]">Commercial</h5>
@@ -291,14 +295,13 @@
                     </div>
                     <!-- 2nd card -->
                     <div
-                        class="flex flex-col lg:flex-row box-border border border-[#e9e9e9] rounded-[16px] p-6 gap-4 w-full lg:w-2/4 bg-white">
-                        <img src="./assets/img4.png" alt="" class="w-full lg:w-2/5">
+                        class="flex flex-col lg:flex-row box-border border border-[#e9e9e9] rounded-[16px] p-6 gap-4 w-full lg:w-2/4 bg-white items-center">
+                        <img src="./assets/img4.png" alt="" class="w-full h-full lg:w-2/5">
                         <div class="space-y-4 w-full lg:w-3/5">
                             <div class="pl-4 space-y-3 pt-3">
                                 <h5 class="text-xl lg:text-2xl font-extrabold text-[#1C1C1C]">Commercial</h5>
-                                <p class="text-base font-medium text-[#494949]">The barn house captivates with its blend
-                                    of
-                                    rustic charm and modern.</p>
+                                <p class="text-base font-medium text-[#494949]">The barn house enchants with its
+                                    combination of rustic appeal and contemporary style.</p>
                             </div>
                             <div class="flex items-center btn btn-ghost w-max">
                                 <a class="text-base lg:text-xl font-bold text-[#212121]">View Details</a>
@@ -384,7 +387,7 @@
 
     </main>
     <!-- Footer Section -->
-    <footer class="bg-[#1C1C1C] mt-3 space-y-7">
+    <footer class="bg-[#1C1C1C] mt-3 space-y-7 lg:space-y-10">
         <!-- Title -->
         <div class="w-4/5 lg:w-1/2 mx-auto pt-[100px] space-y-4">
             <div class="flex items-center btn btn-ghost w-max mx-auto">
@@ -393,14 +396,14 @@
                 </div>
                 <a class="text-[32px] font-extrabold text-[#E9E9E9]">Rinterio</a>
             </div>
-            <p class="text-base font-medium text-[#737373] text-center">The barn house captivates with its blend
-                of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <p class="text-base font-medium text-[#737373] text-center">The barn house impresses with its fusion of
+                rustic allure and contemporary refinement, highlighted by aged wood and polished metal details.</p>
         </div>
         <!-- footer nav -->
         <div class="w-4/5 lg:3/5 mx-auto flex">
             <ul
-                class="text-base font-normal text-[#E9E9E9] flex flex-col lg:flex-row gap-5 lg:gap-20 mx-auto justify-center items-center">
-                <li><a href="#" class="">Home</a></li>
+                class="text-base font-normal text-[#E9E9E9] flex flex-col lg:flex-row gap-5 lg:gap-[150px] mx-auto justify-center items-center">
+                <li><a href="#" class="font-bold">Home</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Blogs</a></li>
