--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <nav class="flex content-between w-4/5 mx-auto">
             <div class="navbar bg-base-100 w-full">
                 <div class="navbar-start">
-                    <div class="flex items-center">
+                    <div class="flex items-center justify-start">
                         <div class="flex items-center btn btn-ghost">
                             <div class="bg-color-primary p-2 rounded-full">
                                 <i class="fa-solid fa-arrow-right -rotate-45"></i>
@@ -64,7 +64,7 @@
                         <li><a>Contact Us</a></li>
                     </ul>
                 </div>
-                <div class="lg:flex items-center navbar-end gap-4">
+                <div class="lg:flex items-center justify-end navbar-end gap-4">
                     <div
                         class="btn btn-ghost items-center p-3 border border-gray-300 rounded-full hidden lg:flex bg-white">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -206,7 +206,7 @@
                         accents.</p>
                 </div>
             </div>
-            <div class="w-4/5 mx-auto flex flex-col lg:flex-row lg:justify-between gap-5 pb-12 lg:pb-24">
+            <div class="w-4/5 mx-auto flex flex-col lg:flex-row lg:justify-between gap-5 pb-9 lg:pb-24">
                 <!-- Card-1 -->
                 <div class="lg:w-1/4 w-full bg-[#E7C1D3] rounded-2xl p-4 space-y-3">
                     <img src="./assets/concept.png" alt="">
@@ -324,6 +324,47 @@
             </div>
         </section>
 
+        <!-- Testimonial Section -->
+        <section class=" w-4/5 lg:w-3/5 mx-auto">
+            <div class="w-full space-y-6 py-8">
+                <h3
+                    class="text-2xl lg:text-[40px] font-bold text-[#212121] lg:leading-[55px] leading-[33px] text-center">
+                    Testimonials</h3>
+                <p class="text-base font-medium text-[#494949] text-center">Transforming outdated spaces into beautiful
+                    showcases, our renovation work breathes new life into your home.</p>
+            </div>
+            <div class="carousel pb-8">
+                <div id="slide1" class="carousel-item relative w-full">
+                    <img src="./assets/testimonial1.png" class="w-max h-max mx-auto rounded-xl shadow-xl" />
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide2" class="carousel-item relative w-full">
+                    <img src="./assets/testimonial2.png" class="w-max h-max mx-auto rounded-xl shadow-xl" />
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative w-full">
+                    <img src="./assets/testimonial3.png" class="w-max h-max mx-auto rounded-xl shadow-xl" />
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <div id="slide4" class="carousel-item relative w-full">
+                    <img src="./assets/testimonial4.png" class="w-max h-max mx-auto rounded-xl shadow-xl" />
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Next Project Section -->
         <section class="bg-[url('./assets/bg.jpg')] bg-cover bg-center pt-6">
             <div class="w-4/5 lg:w-3/5 mx-auto flex flex-col lg:flex-row lg:justify-between pb-[16px] lg:pb-[32px]">
@@ -342,7 +383,7 @@
                 </div>
             </div>
             <!-- Form Section -->
-            <form class="lg:pb-8 rounded-lg w-4/5 lg:w-3/5 mx-auto space-y-5">
+            <form class="pb-6 lg:pb-8 rounded-lg w-4/5 lg:w-3/5 mx-auto space-y-5">
                 <div class="grid grid-rows-1 lg:grid-cols-2 gap-5">
                     <div>
                         <label for="first-name" class="sr-only">First Name</label>
@@ -387,7 +428,7 @@
 
     </main>
     <!-- Footer Section -->
-    <footer class="bg-[#1C1C1C] mt-3 space-y-7 lg:space-y-10">
+    <footer class="bg-[#1C1C1C] space-y-7 lg:space-y-10">
         <!-- Title -->
         <div class="w-4/5 lg:w-1/2 mx-auto pt-[100px] space-y-4">
             <div class="flex items-center btn btn-ghost w-max mx-auto">
